@@ -1,20 +1,20 @@
 Package: libcoin
 Title: Linear Test Statistics for Permutation Inference
-Date: 2017-04-04
-Version: 0.9-2
+Date: 2017-07-02
+Version: 0.9-3
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org")
 Description: Basic infrastructure for linear test statistics and permutation
   inference in the framework of Strasser and Weber (1999) <http://epub.wu.ac.at/102/>. 
   This package must not be used by end-users. CRAN package 'coin' implements all 
   user interfaces and is ready to be used by anyone.
-Depends: R (>= 3.3.0)
+Depends: R (>= 3.4.0)
 Imports: stats, mvtnorm
 LinkingTo: mvtnorm
 NeedsCompilation: yes
 License: GPL-2
-Packaged: 2017-04-05 18:34:16 UTC; hothorn
+Packaged: 2017-07-03 13:04:41 UTC; hothorn
 Author: Torsten Hothorn [aut, cre]
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2017-04-05 21:58:44 UTC
+Date/Publication: 2017-07-03 13:29:44 UTC
