@@ -1,13 +1,13 @@
-dd53301d67cfac883cd8e25230f37a90 *DESCRIPTION
+acb45f3208719971715dd5b7496eb892 *DESCRIPTION
 bf372f5e054dc5d65dc61478448dd7be *NAMESPACE
 849e8c0b342ec4ecfb4584f2419dda84 *R/AAA.R
 bc6d9629b20436638a4c98458b7dbeae *R/ctabs.R
 1cc03cb94a3b9fe3b60508985d769c7c *R/libcoin.R
 339c2c619522533780dc2ab641fef27d *cleanup
-15e6885a544e9aa8cb1d3da7fe2f099f *inst/NEWS.Rd
+f19303b47a6e08b6d5c41c8bfcd6e207 *inst/NEWS.Rd
 8c1c57def0dfd2fc6e2432b783d377e6 *inst/include/libcoin.h
 13fc827e360a3d2c07dd5307867eba84 *inst/include/libcoinAPI.h
-8e54f30cd80df8be09ceeb783c42546a *inst/include/libcoin_internal.h
+a06e00dc8ecc175682b760d6d0857188 *inst/include/libcoin_internal.h
 3a726a779dcdef98c4fc3f99ea116071 *man/LinStatExpCov.Rd
 8093cb2bd38e2f8e0f73c4e4fd46c38b *man/ctabs.Rd
 7778f0f3f51dcb81d56b93592ab8d415 *man/doTest.Rd
@@ -20,7 +20,7 @@ e17256df3c9e356fd69b9774187344ea *src/MaxSelect.c
 61595ef90049993234704846c47d5650 *src/MaxSelect.h
 4c39f5778b83e0ec039a6ff57789c7ba *src/MemoryAccess.c
 d8b344ee9a1eee27cd5b0db8d1d7fc3a *src/MemoryAccess.h
-2dbcf348af1be950b4109397de39182c *src/R_LinearStatistic.c
+2ebd8837c7e010c5f1ce9e2688834f0a *src/R_LinearStatistic.c
 a74266e5ade51702329a0705a3ca8a07 *src/R_Tables.c
 3e7524825ee5842f9d1b219bf3d1aca9 *src/R_Tests.c
 7bb5727f4324e3f030b47d0cb0f0c3f5 *src/R_Utils.c
@@ -31,14 +31,12 @@ f27b75cb5fb9193e7804003520f90967 *src/Tables.c
 bbda1d293f4697ba3f73fb8334bf417e *src/TestStatistics.c
 17b4c96acf4b9a96ebef2955f0aff58e *src/TestStatistics.h
 1104b9ce5e63b413ddd61717a99ffa63 *src/Utils.c
-cedaf30d8b34ac30b0cf151bf5758b89 *src/Utils.h
+163f013bbd5da13b2b14f9d8fd036a3f *src/Utils.h
 e32f76b9425147bdd5260871a734e77f *src/libcoin-init.c
 6ccd7b8ab6ecfc06f635af1073c88bd6 *src/libcoin-win.def
 8c1c57def0dfd2fc6e2432b783d377e6 *src/libcoin.h
 13fc827e360a3d2c07dd5307867eba84 *src/libcoinAPI.h
-8e54f30cd80df8be09ceeb783c42546a *src/libcoin_internal.h
-bcbf5ac45a68dbf5e85e014c55ddedbb *src/rcont2.c
-49ef3b0ebd8b6d224c5205a4a3ab351d *src/rcont2.h
+a06e00dc8ecc175682b760d6d0857188 *src/libcoin_internal.h
 1a56e6f62da3ff28155e4e16ebe46f2c *tests/bugfixes.R
 bda3e6660d0e3d7fb6642255e4685d1b *tests/bugfixes.Rout.save
 24b6cd98cac58f4593247b2d0d9a6128 *tests/regtest_ctabs.R
